WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225176
Web Inspector: [Cocoa] Grid overlay area names aren't centered within areas.
https://bugs.webkit.org/show_bug.cgi?id=225176
Summary
Web Inspector: [Cocoa] Grid overlay area names aren't centered within areas.
Patrick Angle
Reported
2021-04-28 17:27:54 PDT
.
Attachments
Patch v1.0
(2.96 KB, patch)
2021-04-28 21:54 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-28 17:28:08 PDT
<
rdar://problem/77294002
>
Patrick Angle
Comment 2
2021-04-28 21:54:38 PDT
Created
attachment 427329
[details]
Patch v1.0
Devin Rousso
Comment 3
2021-05-03 18:51:26 PDT
Comment on
attachment 427329
[details]
Patch v1.0 rs=me
EWS
Comment 4
2021-05-03 19:03:12 PDT
Committed
r276941
(
237274@main
): <
https://commits.webkit.org/237274@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427329
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug