Web Inspector: [Cocoa] Grid overlay area names aren't centered within areas. https://bugs.webkit.org/show_bug.cgi?id=225176

Reviewed by Devin Rousso.

Grid area names were changed to be centered in their area in r275519. On iOS, the label was changed to treat the
provided point as the center, but the label was still being anchored in the top-left corner. This patch corrects
that by using the center of the area as the anchor point for the label.

* UIProcess/Inspector/ios/WKInspectorHighlightView.mm:
(-[WKInspectorHighlightView _createGridOverlayLayer:scale:]):


Canonical link: https://commits.webkit.org/237274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276941 268f45cc-cd09-0410-ab3c-d52691b4dbfc